# babyagi3

./: .gitignore  .replit  ARCHITECTURE.md  CODE_READINESS_ANALYSIS.md  CONTEXT_OVERFLOW_ANALYSIS.md  LICENSE  MODELS.md  README.md  RUNNING.md  TODO.md  agent.py  config.py  config.yaml  context_budget.py  initialization.py  llm_config.py  main.py  pyproject.toml  replit.md  scheduler.py  server.py
.github/workflows/: ci.yml
attached_assets/: Pasted-You-hey-Assistant-Hello-How-can-I-help-you-today-I-have_1769610524609.txt
docs/: DESIGN_SELF_IMPROVEMENT.md  METRICS_IMPLEMENTATION_PLAN.md  README.md  SKILLS_INTEGRATION_ANALYSIS.md  architecture-diagrams.html  prompting-tips-analysis.md
listeners/: README.md  __init__.py  cli.py  email.py  voice.py
memory/: README.md  __init__.py  context.py  embeddings.py  event_log.py  extraction.py  graph.py  integration.py  learning.py  models.py  retrieval.py  store.py  summaries.py  system.py  tool_context.py  tools.py
metrics/: README.md  __init__.py  clients.py  collector.py  costs.py  models.py
scripts/: kamiyo_smoke.py
senders/: README.md  __init__.py  cli.py  email.py  sendblue.py
tests/: __init__.py  conftest.py  test_agent.py  test_config.py  test_kamiyo_mock_flow.py  test_llm_config.py  test_memory_models.py  test_metrics_collector.py  test_metrics_costs.py  test_metrics_models.py  test_optional_tools.py  test_scheduler.py  test_secrets_optional_keys.py  test_senders.py  test_server.py  test_testing.py  test_tools_init.py  test_utils.py
tools/: README.md  __init__.py  credentials.py  email.py  meeting.py  metrics.py  research.py  research_agent.py  sandbox.py  secrets.py  skills.py  verbose.py  web.py
tools/files/: __init__.py  creators.py  index.py  processor.py  storage.py
tools/optional/: __init__.py  elevenlabs.py  exa.py  github_api.py  godaddy.py  happenstance.py  http_utils.py  hunter.py  kamiyo.py  peopledatalabs.py  printful.py  runwayml.py  shopify.py  videodb.py  voilanorbert.py  x_api.py
utils/: README.md  __init__.py  console.py  email_client.py  events.py
