[project]
name = "babyagi"
version = "0.2.0"
description = "Minimal agent with background objectives and recurring tasks"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.76.0",
    "e2b-code-interpreter>=1.0.0",
    "fastapi>=0.115.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.32.0",
]

[project.scripts]
agent = "agent:main"
server = "server:app"
