[project]
name = "babyagi"
version = "0.2.1"
description = "Minimal agent with background objectives and recurring tasks"
requires-python = ">=3.12"
dependencies = [
    # Core
    "anthropic>=0.76.0",
    "e2b-code-interpreter>=1.0.0",
    "fastapi>=0.115.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.32.0",
    # Web tools
    "duckduckgo-search>=7.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    # Browser automation
    "browser-use>=0.1.40",
    "langchain-anthropic>=0.3.0",
    # Email
    "agentmail>=0.1.0",
    # Secrets management
    "keyring>=25.0.0",
    "keyrings.cryptfile>=1.3.9",
]

[project.scripts]
agent = "agent:main"
server = "server:app"
