[project]
name = "babyagi"
version = "0.3.0"
description = "Minimal agent with background objectives and recurring tasks"
requires-python = ">=3.12"
dependencies = [
    # Core LLM support - LiteLLM for multi-provider (OpenAI, Anthropic, etc.)
    "litellm>=1.40.0",
    "anthropic>=0.76.0",
    "openai>=1.0.0",
    "e2b-code-interpreter>=1.0.0",
    "fastapi>=0.115.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.32.0",
    # Web tools (httpx also used for Browser Use Cloud API)
    "duckduckgo-search>=7.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    # Email
    "agentmail>=0.1.0",
    # Secrets management
    "keyring>=25.0.0",
    "keyrings-cryptfile>=1.3.9",
    "ddgs>=9.10.0",
    # Scheduler (optional but recommended for full cron support)
    "croniter>=2.0.0",
    # Configuration
    "pyyaml>=6.0",
    "composio>=0.10.0",
]

[project.optional-dependencies]
voice = ["sounddevice", "numpy", "openai-whisper", "pyttsx3", "scipy"]

[project.scripts]
agent = "agent:main"
server = "server:app"
